# soc-enrichment

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: routes_email_analyze.py  routes_email_report.py  routes_enrich_domain.py  routes_enrich_hash.py  routes_enrich_ip.py  routes_events.py  routes_health.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  event_record.py
backend/app/reports/templates/: email_report.html
backend/app/schemas/: correlation.py  email_analysis.py  events.py  ip_enrich.py
backend/app/schemas/enrich/: domain_enrich.py  email_enrich.py  hash_enrich.py  ip_enrich.py
backend/app/services/: abuseipdb_service.py  email_enrichment_service.py  eml_analyzer_service.py  urlscan_service.py  vt_service.py  whois_service.py
backend/app/services/alerting/: alert_dispatcher.py  slack_alert_service.py  webhook_alert_service.py
backend/app/services/correlation/: correlation_engine.py  rule_engine.py
backend/app/services/email_analyzer/: email_analysis_service.py  email_report_service.py  eml_analyzer_service.py
backend/app/services/enrichment/: dns_service.py  domain_enrich_service.py  email_enrichment_service.py  hash_enrich_service.py  ip_enrich_service.py  ipinfo_service.py  urlscan_service.py  vt_service.py  whois_service.py
backend/app/services/events/: event_pipeline_service.py  event_store_service.py  events_store_service.py
backend/app/services/risk_scoring/: domain_risk.py  hash_risk.py  (+3 more)
(+4 files in other folders)
