[tool.poetry]
name = "soc-enrichment-backend"
version = "0.1.0"
description = "SoC enrichment and automation backend (FastAPI)"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"          
dnspython = "^2.6.1"  
python-whois = "^0.9.4"
tldextract = "^5.1.2"
python-multipart = "^0.0.9"
jinja2 = "^3.1.4"
requests = "^2.31.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
